syntax = "proto3";
package fairyring.pep;

option go_package = "github.com/FairBlock/fairyring/x/pep/types";

message ActivePubKey {
  string publicKey = 1;
  string creator = 2;
  uint64 expiry = 3;
}

message QueuedPubKey {
  string publicKey = 1;
  string creator = 2;
  uint64 expiry = 3;
}
